Dolly breaks in quad view #36773

Closed
opened 2013-09-19 11:08:42 +02:00 by Delo Lat · 5 comments

%%%Windows 7, Nvidia Geforce GTX 295

Blender Version: 2.68.0 r58537

Using blender preset but I changed my dolly to alt + rmb which works fine. Go into quad view and dolly does no longer works at top right view. Get out of quad view and still is broken. Have to restart whole app to get dolly to work again.

set select with: to left(otherwise dolly wont work. ie. key conflict)
set dolly to alt + rmb
alt + ctrl + q to get into quad view
move or switch camera angle in top right view
try to use dolly

%%%

%%%Windows 7, Nvidia Geforce GTX 295 Blender Version: 2.68.0 r58537 Using blender preset but I changed my dolly to alt + rmb which works fine. Go into quad view and dolly does no longer works at top right view. Get out of quad view and still is broken. Have to restart whole app to get dolly to work again. set select with: to left(otherwise dolly wont work. ie. key conflict) set dolly to alt + rmb alt + ctrl + q to get into quad view move or switch camera angle in top right view try to use dolly %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Tested but I can't redo, this could be caused by the delta value being set, this may be a duplicate of [#36226].%%%

%%%Tested but I can't redo, this could be caused by the delta value being set, this may be a duplicate of [#36226].%%%

%%%I can confirm the issue, but it's not dolly that's broken really. Dolly only works in perspective draw mode, not orthographic. If you're in camera view, it will only work if the camera is locked to the view, otherwise it will also do nothing. That's the intended behavior in the code.

However when you do MMB drag to rotate in the top right camera view, it will put you in orthographic draw mode, which is unexpected. Further, Dolly could also work like MMB drag rotate in camera view, stepping out of camera view automatically instead of doing nothing.%%%

%%%I can confirm the issue, but it's not dolly that's broken really. Dolly only works in perspective draw mode, not orthographic. If you're in camera view, it will only work if the camera is locked to the view, otherwise it will also do nothing. That's the intended behavior in the code. However when you do MMB drag to rotate in the top right camera view, it will put you in orthographic draw mode, which is unexpected. Further, Dolly could also work like MMB drag rotate in camera view, stepping out of camera view automatically instead of doing nothing.%%%

%%%Committed change so dolly exits camera view as Brecht suggests, r60249.%%%

%%%Committed change so dolly exits camera view as Brecht suggests, r60249.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36773
No description provided.