fix [#36773] Dolly breaks in quad view

more of a usability issue then a bug, now dolly switches out of camera view, like view-rotate does.